# tibber-mcp

./: Dockerfile  README.md  pyproject.toml  server.py  smithery.yaml
doc/: tibber-mcp.drawio.xml
